ansible/roles/identity-theft/files/manifests/08-public.yaml
apiVersion: v1
kind: Pod
metadata:
  name: public-terminal
  namespace: public
  labels:
    app: terminal
spec:
  serviceAccountName: elitehexor
  containers:
    - name: hacker-prompt
      image: docker.io/controlplaneoffsec/identity-theft:public-terminal
      command: [ "sleep", "2d" ]
      securityContext:
        allowPrivilegeEscalation: false
  restartPolicy: Always
