ansible/roles/identity-theft/files/manifests/06-secret-store.yaml
apiVersion: v1
kind: Service
metadata:
  name: secret-store
  namespace: private-services
spec:
  selector:
    app: secret-store
  ports:
    - port: 5050
      targetPort: 5050
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-store
  namespace: private-services
  labels:
    app: secret-store
spec:
  selector:
    matchLabels:
      app: secret-store
  replicas: 1
  template:
    metadata:
      labels:
        app: secret-store
    spec:
      nodeName: master-1
      containers:
        - name: secret-store
          image: docker.io/controlplaneoffsec/identity-theft:secret-store
          ports:
            - containerPort: 5050
              name: http
