ansible/roles/identity-theft/files/manifests/05-yamlidator.yaml
apiVersion: v1
kind: Service
metadata:
  name: yamlidator
  namespace: public-services
spec:
  ports:
    - name: yamlidator
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: yamlidator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yamlidator
  name: yamlidator
  namespace: public-services
spec:
  selector:
    matchLabels:
      app: yamlidator
  replicas: 1
  template:
    metadata:
      labels:
        app: yamlidator
    spec:
      serviceAccountName: yamlidator
      containers:
        - name: yamlidator
          image: docker.io/controlplaneoffsec/identity-theft:yamlidator
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - mountPath: /mnt/
              name: yaml
      volumes:
        - hostPath:
            path: /mnt
            type: Directory
          name: yaml
      restartPolicy: Always
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: yamlidator
  namespace: public-services
spec:
  podSelector:
    matchLabels:
      app: batch
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: frontend
