ansible/roles/identity-theft/files/manifests/07-pod-checker.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-checker
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: pod-checker
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-checker
  namespace: frontend
  labels:
    app: pod-checker
spec:
  containers:
    - name: pod-checker
      image: docker.io/controlplaneoffsec/identity-theft:pod-checker
      ports:
        - containerPort: 8080
          name: pod-checker
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pod-checker
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: pod-checker
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: public
